# 2023-2024

./: ..gitmodules.swp  .gitignore  .gitmodules  README.md  Shapes.py  Trapeziod Short-Nonlinear 1 from [Static 1].ITC  Trapeziod Short-Nonlinear 1.BD2  Trapeziod Short-Nonlinear 1.CSY  Trapeziod Short-Nonlinear 1.GEN  Trapeziod Short-Nonlinear 1.IDA  Trapeziod Short-Nonlinear 1.MAT  Trapeziod Short-Nonlinear 1.MFC  Trapeziod Short-Nonlinear 1.SL2  Trapeziod Short-Nonlinear 1.STG  Trapeziod Short-Static 1.GCF  Trapeziod Short-Static 1.LCD  Trapeziod Short-Static 1.MAS  Trapeziod Short-Static 2 from [Static 1].OUT  Trapeziod Short-Static 2 from [Static 1].SL3  bofadeez.SLDASM  pin.SLDPRT  subscriber.c  webcam.py
ros2_ws/src/bur_auv/auv/: CMakeLists.txt  package.xml
ros2_ws/src/bur_auv/auv/include/auv/: qos_profile.hpp
ros2_ws/src/bur_auv/auv/launch/: old.launch.py  test.launch.py
ros2_ws/src/bur_auv/auv/src/: imu_repub.cpp  pid_recombiner.cpp  pid_recombiner_sync.cpp
ros2_ws/src/bur_auv/auv_control/: CMakeLists.txt  package.xml
ros2_ws/src/bur_auv/auv_control/config/: ekf.yaml  motor_force_config.yaml  pid_settings.yaml  rviz_config.rviz  warpauv_motor_config.yaml
ros2_ws/src/bur_auv/auv_control/include/auv_control/: motor_controller.hpp  pid_node.hpp  thrusters.hpp
ros2_ws/src/bur_auv/auv_control/include/utilities/: common_functions.hpp
ros2_ws/src/bur_auv/auv_control/launch/: ekf.launch.py  motor.launch.py  motor_param_test.launch.py  pid.launch.py  test.launch.py
ros2_ws/src/bur_auv/auv_control/scripts/: thruster_matrix_generator
ros2_ws/src/bur_auv/auv_control/src/: motor_controller.cpp  motor_controller2.cpp  pid_node.cpp  thrusters.cpp
ros2_ws/src/bur_auv/auv_control/src/utilities/: common_functions.cpp
ros2_ws/src/bur_auv/bur_auv_control/: CMakeLists.txt  package.xml
ros2_ws/src/bur_auv/bur_auv_control/launch/: ekf.launch.py  ekf2.launch.py
ros2_ws/src/bur_auv/bur_auv_control/params/: ekf.yaml  ekf2.yaml
ros2_ws/src/bur_auv/bur_auv_planner/: CMakeLists.txt  package.xml
ros2_ws/src/bur_auv/bur_auv_planner/behavior_trees/: bur_tree.xml  prequal_tree.xml
ros2_ws/src/bur_auv/bur_auv_planner/include/bur_auv_planner/: bur_planner.h
ros2_ws/src/bur_auv/bur_auv_planner/launch/: bringup.launch.py  planner.launch.py
ros2_ws/src/bur_auv/bur_auv_planner/src/: bur_planner.cpp  bur_planner.h
ros2_ws/src/bur_auv/drivers/: CMakeLists.txt  package.xml
ros2_ws/src/bur_auv/drivers/src/bar30_depth_sensor/: .gitmodules  MS5837.cpp  MS5837.h  README.md  test
ros2_ws/src/bur_auv/drivers/src/lps331ap_i2c/: LPS.h  README.md  test
ros2_ws/src/bur_auv/drivers/src/raspi_dma_pwm/: README.md  raspi_dma_pwm.h
ros2_ws/src/bur_auv/drivers/src/xsens_mti_i2c/: .gitmodules  MTi.cpp  MTi.h  README.md  calibrate  configure  test
ros2_ws/src/bur_auv/eskf/: CMakeLists.txt  package.xml
ros2_ws/src/bur_auv/eskf/include/eskf/: Node.hpp  common.h  eskf.hpp
ros2_ws/src/bur_auv/eskf/launch/: eskf.launch
ros2_ws/src/bur_auv/eskf/src/: Node.cpp  eskf.cpp  eskf_node.cpp
ros2_ws/src/bur_auv/simple_manager/: CMakeLists.txt  package.xml
ros2_ws/src/bur_auv/simple_manager/behavior_trees/: comp_tree.xml  qualification_tree.xml  real_comp_tree.xml  simple_tree.xml  test.xml
ros2_ws/src/bur_auv/simple_manager/include/: bt_nodes.h  manager_node.h  simple_planner.h
ros2_ws/src/bur_auv/simple_manager/launch/: manager.launch.py  planner.launch.py
ros2_ws/src/bur_auv/simple_manager/params/: params.yaml
ros2_ws/src/bur_auv/simple_manager/src/: bt_nodes.cpp  manager_node.cpp  simple_manager.cpp
ros2_ws/src/bur_auv/simple_planner/: CMakeLists.txt  package.xml
ros2_ws/src/bur_auv/simple_planner/include/simple_planner/: planner_node.hpp
ros2_ws/src/bur_auv/simple_planner/launch/: test_planner.launch.py
ros2_ws/src/bur_auv/simple_planner/src/: planner_node.cpp
ros2_ws/src/bur_rov/bur_rov/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/bur_rov/bur_rov/config/: fake_joystick.yaml  ps4.yaml  taranis.yaml
ros2_ws/src/bur_rov/bur_rov/include/bur_rov/: joy_command.hpp
ros2_ws/src/bur_rov/bur_rov/launch/: auv.launch.py  camera.launch.py  ekf.launch.py  ekf.yaml  joy.launch.py  micro_ros.launch.py  open_loop.launch.py  rov-launch.py  rov.launch.py  rov_launch.py
ros2_ws/src/bur_rov/bur_rov/src/: joy_command.cpp  open_loop_go_burr.cpp
ros2_ws/src/bur_rov/bur_rov_control/controller/: CMakeLists.txt  package.xml
ros2_ws/src/bur_rov/bur_rov_control/controller/launch/: controller.launch
ros2_ws/src/bur_rov/bur_rov_control/controller/src/: ControllerNode.cpp  utility_func.cpp
ros2_ws/src/bur_rov/bur_rov_control/thruster_manager/: CMakeLists.txt  package.xml
ros2_ws/src/bur_rov/bur_rov_control/thruster_manager/config/: motor_force_config.yaml  motor_force_config_05-28.yaml  motor_force_config_05-29.yaml  motor_force_config_NED.yaml  motor_force_config_NWU.yaml  motor_force_config_true.yaml
ros2_ws/src/bur_rov/bur_rov_sensors/: CMakeLists.txt  package.xml
ros2_ws/src/bur_rov/bur_rov_sensors/launch/: bar30.launch.py  lps.launch.py
ros2_ws/src/controller/: CMakeLists.txt  package.xml
ros2_ws/src/controller/include/controller/: ControllerNode.h  pid.hpp
ros2_ws/src/controller/launch/: controller.launch
ros2_ws/src/controller/src/: ControllerNode.cpp  pid.cpp
ros2_ws/src/pid/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/pid/include/pid/: pid.hpp  pid_component.hpp  visibility_control.h
ros2_ws/src/pid/launch/: muuv_pid.launch.py  pid.launch.py  single_node.launch.py
ros2_ws/src/pid/src/: pid.cpp  pid_component.cpp
src/bt_test/: CMakeLists.txt  package.xml
src/bt_test/src/: bt_test.cpp  bur_nodes.h  bur_test.cpp  dummy_nodes.h
state-estimation/: CMakeLists.txt  package.xml
state-estimation/include/eskf/: Node.hpp
state-estimation/install/: local_setup.sh  setup.ps1  setup.sh
state-estimation/install/eskf/share/eskf/: package.zsh
state-estimation/install/state-estimation/share/state-estimation/: package.bash  package.dsv  package.ps1  package.sh
state-estimation/log/: latest_build
state-estimation/src/: Node.cpp  eskf.cpp
(+1254 files in other folders)
