<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nakulsaliljoshi@gmail.com">nakul</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>control_toolbox</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <build_export_depend>control_toolbox</build_export_depend>
  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>

  <exec_depend>control_toolbox</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
