<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>auv_ros</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="alex.xu@whoi.edu">isopodin-time</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>ros2launch</exec_depend>
  <depend>custom_msg_srv</depend>
  <depend>message_filters</depend>
  <depend>std_msgs</depend>
  <exec_depend>auv_control</exec_depend>
  <exec_depend>auv_sensors</exec_depend>
  <exec_depend>auv_msgs</exec_depend>
  <exec_depend>drivers</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
