<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bur_auv_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="bur.asmebruins@gmail.com">buruser</maintainer>
  <license>TODO: License declaration</license>

  <depend>robot_localization</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
